added ability for login information to be displayed in top right corner

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,12 @@ h1 {
   font-family: 'Roboto Slab';
 }
 
+/* Stylize login info */
+#login-info {
+  font-family: 'Roboto';
+  font-size:smaller;
+}
+
 /* Style the tab */
 .tab {
     border: 1px solid #ccc;
